--- a/assets/docs/20190928.md
+++ b/assets/docs/20190928.md
@@ -79,6 +79,7 @@ tags:
 個人事業税対象の事業区分に当てはまらないため、個人事業税は発生しない
 ```
 > 引用：[システムエンジニア、プログラマーのITフリーランスが個人事業税を課税されるケース](https://www.nomad-freelance.life/entry/13)
+> 参照：[個人事業税ってなんなの？手紙が来たから問い合わせてみたよ](https://www.zubora-mom.com/tax-kojinjigyouzei/)
 
 ## まとめ
 東京でエンジニア業をやっているフリーランスは、`個人事業税` がかからない。  
