--- a/assets/docs/20191120.md
+++ b/assets/docs/20191120.md
@@ -14,7 +14,7 @@ tags:
 - React Portal の実装
 - Juke/Footwork Track Make
 
-### React Portalの実装
+## React Portalの実装
 今までモーダルの実装では、 [React Gateway](https://github.com/cloudflare/react-gateway) を使用していたが、プランニングポーカー時（見積）に `Portal` があると助言を受け、実装した。[v16.0/September 26, 2017](https://ja.reactjs.org/blog/2017/09/26/react-v16.0.html) からすでにあったが、知らんかった。
 
 > ポータル (portal) は、親コンポーネントの DOM 階層外にある DOM ノードに対して子コンポーネントをレンダーするための公式の仕組みを提供します。
@@ -44,7 +44,6 @@ ReactDOM.createPortal(child, container)
 
 これによって、初期値を毎回再作成しないでよくなる。
 
-- 参照: [計算量の大きいオブジェクトの作成を遅延する方法はありますか？](https://ja.reactjs.org/docs/hooks-faq.html#how-to-create-expensive-objects-lazily)
 ```javascript
 function Image(props) {
   // ⚠️ IntersectionObserver is created on every render
@@ -53,11 +52,15 @@ function Image(props) {
 }
 ```
 
-#### 参照
-
+### 参照
 - [React/Docs/Portals](https://ja.reactjs.org/docs/portals.html)
 - [React Portals with Hooks](https://www.jayfreestone.com/writing/react-portals-with-hooks/)
+- [計算量の大きいオブジェクトの作成を遅延する方法はありますか？](https://ja.reactjs.org/docs/hooks-faq.html#how-to-create-expensive-objects-lazily)
 
 ---
 
-### Juke/Footwork Track Make
+## Juke/Footwork Track Make
+KRS ONEサンプリングで one loop 作成。  
+[JUST JAM 58 DJ RASHAD AND DJ SPINN](https://www.youtube.com/watch?v=saGtQHa8iq4) を改めて鑑賞。やはりいい。ビールーが進む。
+
+スクラッチからのサンプリングのフローがいい感じ。
