--- a/assets/docs/20191120.md
+++ b/assets/docs/20191120.md
@@ -61,6 +61,13 @@ function Image(props) {
 
 ## Juke/Footwork Track Make
 KRS ONEサンプリングで one loop 作成。  
-[JUST JAM 58 DJ RASHAD AND DJ SPINN](https://www.youtube.com/watch?v=saGtQHa8iq4) を改めて鑑賞。やはりいい。ビールーが進む。
+[JUST JAM 58 DJ RASHAD AND DJ SPINN](https://www.youtube.com/watch?v=saGtQHa8iq4) を改めて鑑賞。
+
+やはりいい。ビールーが進む。
 
 スクラッチからのサンプリングのフローがいい感じ。
+
+あとこれほしいかも。  
+[Introducing Phase - A new way to perform | MWM](https://www.youtube.com/watch?v=tg_NN-vDZoY&feature=emb_logo)  
+DJ CLENT がこの間使っているのを見ていい感じだったし。
+
